[gd_scene load_steps=4 format=3 uid="uid://cjwf6ulibdpvr"]

[ext_resource type="Script" uid="uid://owc1q1nlv3cr" path="res://scripts/level_entities/planet.gd" id="1_u3uqc"]
[ext_resource type="Texture2D" uid="uid://csqm03cav5a3l" path="res://assets/textures/planets/planet_sprite_sheet.png" id="2_ayfns"]

[sub_resource type="CircleShape2D" id="CircleShape2D_st7tq"]
radius = 800.0

[node name="Planet" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_u3uqc")

[node name="PlanetTexture" type="Sprite2D" parent="."]
texture = ExtResource("2_ayfns")
hframes = 15
vframes = 15
frame = 1

[node name="CommArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CommArea"]
shape = SubResource("CircleShape2D_st7tq")

[node name="Node" type="Node2D" parent="."]

[node name="Label" type="RichTextLabel" parent="Node"]
offset_left = -248.333
offset_top = -332.0
offset_right = 249.667
offset_bottom = -297.0
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "PLANET"
horizontal_alignment = 1

[connection signal="body_entered" from="CommArea" to="." method="_on_comm_area_body_entered"]
[connection signal="body_exited" from="CommArea" to="." method="_on_comm_area_body_exited"]
